--- a/client/src/pages/main/style.css
+++ b/client/src/pages/main/style.css
@@ -7,6 +7,9 @@
 }
 
 .page__main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 10px;
   background-color: var(--primary-color);
 }
